--- a/src/css/style.css
+++ b/src/css/style.css
@@ -1,7 +1,5 @@
 body {
-     font-family: 'Outfit', 
-     sans-serif;
-
+     font-family: 'Outfit', sans-serif;
      background-image: url(../imagens/fundo-site.png);
      background-repeat: no-repeat ;
      background-size: cover;
@@ -51,8 +49,7 @@ body {
     border-radius: 50px;
     border: 0;
     cursor: pointer;
-    transition: background-color 0.2s ease-in-out;
-
+    transition: 0.2s ease-in-out;
 }
 
 .seta .voltar {
@@ -61,8 +58,6 @@ body {
 
 .seta:hover {
     background-color: #8351fe;
-
-
 }
 
 .pokemons {
@@ -75,8 +70,6 @@ body {
     padding: 12px;
     border-radius: 10px;
     transition: opacity 0.3s ease-in-out;
-
-
 }
 
 .pokemons.selecionado {
@@ -88,19 +81,16 @@ body {
 .pokemons.selecionado.fundo-1 {
     background: url(../imagens/fundo-card-1.jpg)
     no-repeat;
-
 }
 
 .pokemons.selecionado.fundo-2 {
     background: url(../imagens/fundo-card-2.jpg)
     no-repeat;
-    
 }
 
 .pokemons.selecionado.fundo-3 {
     background: url(../imagens/fundo-card-3.jpg)
     no-repeat;
-    
 }
  
 .informacoes {
@@ -111,7 +101,6 @@ body {
     padding: 8px 10px;
     border-top-left-radius: 10px;
     border-top-right-radius: 10px;
-
 }
 
 .titulo {
@@ -124,12 +113,10 @@ body {
     color: #f1ecff;
     padding: 6px;
     border-radius: 20px;
-
 }
 
 .conteiner {
     text-align: center;
-
 }
 
 .pikachu-imagem {
@@ -142,8 +129,6 @@ body {
     background-color: rgba(255, 255, 255, 0.8);
     border-bottom-left-radius: 10px;
     border-bottom-right-radius: 10px;
-
-
 }
 
 .title {
@@ -151,7 +136,6 @@ body {
     color: #f1ecff;
     font-size: 15px;
     padding: 12px;
-
 }
 
 .sinopse {
@@ -160,5 +144,4 @@ body {
     text-align: justify;
     max-height: 115px;
     overflow-y: auto;
-
 }
